--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/pages/cart/page.jsx", "src/app/pages/checkout/page.jsx", "src/app/components/product/ProductDetails.jsx", "src/app/components/product/ProductCard.jsx"],
   "exclude": ["node_modules"]
 }
